Resolve all 17 Boundary D review findings: infrastructure, configuration, integration and observability
Addresses every finding from the Boundary D code review (0 critical, 13 major, 3 minor,
1 info; 6 security) that marked the carddemo-java module NOT APPROVED.

Security (6)
- D-004 Production start-up now refuses every AWS SDK-native endpoint-override channel
  (AWS_ENDPOINT_URL, the per-service variants, aws.endpointUrl*, and shared-config
  endpoint_url read through the SDK's own ProfileFile). Omitting endpointOverride() never
  stopped the SDK honouring its own chain, so production traffic was redirectable while the
  logs claimed redirection was disabled.
- D-011 Generation publication and retention are serialised per logical base by a PostgreSQL
  advisory lock, closing an unlocked list-sort-delete TOCTOU (CWE-367). Two differently named
  jobs published the same logical backup base, which is now declared once.
- D-013 Management telemetry requires a dedicated ROLE_MONITORING machine identity on its own
  filter chain; only the aggregate and the two probe groups remain anonymous. Any ordinary
  application user could previously read metrics, prometheus and info.
- D-014 Both test profiles bind LOCALSTACK_* credentials instead of the default chain's own
  variable names, so ambient real credentials cannot enter a LocalStack-targeted process.
- D-015 Container scans no longer pass --ignore-unfixed, which deleted findings from the
  archived report as well as the verdict. All HIGH/CRITICAL are retained and the verdict is
  computed from the retained report so a failing run enumerates what it found.
- D-016 PostgreSQL slow-statement logging no longer emits bind values
  (log_parameter_max_length=0 and the on-error equivalent). Verified against the running
  container: a bound parameter was recoverable from the log before, and is not after.

Health, readiness and observability (5)
- D-001/D-005 The image probe reads the liveness group over the transport the server